Implemented APIVacRecordTest, fixed typo in layout.html

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -152,7 +152,7 @@ a {
 				</ul>
 				<ul id="hcp-dropdown" class="nav navbar-nav">
 					<li class="dropdown"><a class="dropdown-toggle"
-						data-toggle="dropdown" href="#">Patient<span class="caret"></span></a>
+						data-toggle="dropdown" href="#">HCP<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 														<li><a href="/iTrust2/hcp/viewAppointmentRequests"
 								id="viewrequests">View Appointment Requests</a></li>
