--- a/iTrust2/src/main/resources/views/hcp/viewPatientPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/hcp/viewPatientPersonalRepresentatives.html
@@ -135,7 +135,7 @@
 
 							<!-- Header for patients Representatives -->
 							<div class="panel-heading">
-								<h3>Patient's Representatives</h3>
+								<h3>{{currentPatient}}'s Representatives</h3>
 							</div>
 							<div class="panel-body">
 								
@@ -204,7 +204,7 @@
 
 							<!-- Header for patients Representatives -->
 							<div class="panel-heading">
-								<h3>People that Patient Represents</h3>
+								<h3>People that {{currentPatient}} Represents</h3>
 							</div>
 							<div class="panel-body">
 								
