Fixed minor bug were error message was not showing up when adding rep with the same name of patient. Also fixed the way that strings are passed to the controller when declaring a rep as a HCP

--- a/iTrust2/src/main/resources/views/hcp/viewPatientPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/hcp/viewPatientPersonalRepresentatives.html
@@ -53,11 +53,13 @@
 					if (!checkInput(username)) {
 						$scope.isValid = false;
 					} else {
-						$http.post("/iTrust2/api/v1/declareRepHCP/" + $scope.currentPatient + "," + username).then(
+						$http.post("/iTrust2/api/v1/declareRepHCP/" + $scope.currentPatient + "/" + username).then(
 							function(response) {
 								$scope.representsPatient.push(response.data);
+								$scope.isValid = true;
 								$scope.errorMessage = "";
 							}, function(rejection) {
+								$scope.isValid = false;
 								$scope.errorMessage = rejection.data.message;
 							});
 					}
