Continue working on APIVacRecordTest, added safety measure to delete existing conflicting records.  Added patient view vac records page.

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -189,6 +189,7 @@ a {
 							<li><a href="/iTrust2/patient/viewOfficeVisits">Past Office Visits</a></li>
 							<li><a href="/iTrust2/patient/viewDiagnoses" id="viewDiagnoses">Diagnoses</a></li>
 							<li><a href="/iTrust2/patient/viewPrescriptions" id="viewPrescriptions">Prescriptions</a></li>
+							<li><a href="/iTrust2/patient/viewVacRecords" id="viewVacRecords">Vaccination Records</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
