documentOfficeVisit.html now supports vaccination records.  However the checks don't seem to be working yet.

--- a/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
+++ b/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
@@ -63,6 +63,16 @@
               	
               	return err.join(". ");
               }
+              
+              var checkValidVacRecord = function(v) {
+            	  var err = [];
+            	  if (!v.vaccination) {
+            		  err.push("Vaccination record must be associated with a vaccination");
+            	  }
+            	  if (!isDate(v.administrationDate)) {
+            		  err.push("Administration date is in an invalid format");
+            	  }
+              }
 
 
             $scope.three = false;
@@ -149,6 +159,10 @@
               function (response) {
                 $scope.drugs = response.data;
               });
+            $http.get("/iTrust2/api/v1/vaccinations").then(
+              function (response) {
+            	$scope.vaccinations = response.data;
+        	  });
             $http.get("/iTrust2/api/v1/icdcodes").then(
               function (response) {
                 $scope.icdcodes = response.data;
@@ -233,6 +247,10 @@
               $scope.visit.prescriptions.forEach(function (p) {
                 p.patient = $scope.visit.patient;
               });
+              $scope.visit.vacRecords = $scope.vacRecords;
+              $scope.visit.vacRecords.forEach(function (v) {
+            	  v.patient = $scope.visit.patient;
+              });
 
               $http({
                 method: 'POST',
@@ -270,6 +288,12 @@
               $scope.endEntry = "";
               $scope.renewalEntry = "";
             }
+            
+            //clears local variables for prescription form
+            function resetVacRecordForm() {
+            	$scope.vaccinationEntry = "";
+            	$scope.administrationEntry = "";
+            }
 
             // capture each diagnosis into an array
             $scope.diagnoses = [];
@@ -300,6 +324,22 @@
   	              resetPrescriptionForm();
                 }
             }
+            
+            //capture each vacrecordinto an array
+            $scope.vacRecords = [];
+            $scope.fillVacRecord = function () {
+            	var v = {
+            			vaccination: $scope.vaccinationEntry,
+            			administrationDate: $scope.administrationEntry
+            	}
+            	var err = checkValidVacRecord(v);
+            	if (err) {
+            		$scope.errorMsg = err;
+            	} else {
+            		$scope.vacRecords.push(v);
+            		resetVacRecordForm();
+            	}
+            }
 
             //remove local diagnosis from list
             $scope.removeDiagnosis = function ($index) {
@@ -310,10 +350,16 @@
             $scope.removePrescription = function ($index) {
               $scope.prescriptions.splice($index, 1);
             }
+            
+            //remove local vacRecord from list
+            $scope.removeVacRecord = function ($index) {
+            	$scope.vacRecords.splice($index, 1);
+            }
 
             //call initally
             resetDiagnosisForm();
             resetPrescriptionForm();
+            resetVacRecordForm();
 
 
           });
@@ -715,6 +761,68 @@
                                   </div>
                                   <div class="col-md-2">
                                     <button class="btn btn-danger btn-xs" ng-click="removePrescription($index)" name="removePrescription">
+                                      <b>x</b>
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
+                  <!-- Vaccination Panel -->
+                  <div class="col-md-4">
+                    <div class="panel panel-info">
+                      <div class="panel-heading">
+                        <h4>Vaccination Record</h4>
+                      </div>
+                      <div class="panel-body">
+                        <div class="form-group row">
+                          <div class="col-xs-6">
+                            <label>Vaccination:</label>
+                          </div>
+                          <div class="col-xs-6 radio-box">
+                            <div class="form-check">
+                              <ul style="list-style: none;">
+                                <li ng-repeat="v in vaccinations">
+                                  <label>
+                                    <input type="radio" ng-model="$parent.vaccinationEntry" name="{{v.name}}" value="{{v.code}}" required="true" /> {{v.name}}
+                                  </label>
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                          <div class="col-xs-6">
+                            <label>Administration Date:</label>
+                          </div>
+                          <div class="col-xs-6">
+                            <input type="text" class="form-control" placeholder="MM/DD/YYYY" name="administrationEntry" ng-model="administrationEntry" required/>
+                          </div>
+                        </div>
+                        <div class="form-group row text-center">
+                          <button class="btn btn-success" ng-click="fillVacRecord()" name="fillVacRecord">Add Vaccination Record</button>
+                        </div>
+                        <div class="form-group row">
+                          <div class="col-md-12">
+                            <div class="panel panel-default">
+                              <div class="panel-heading">
+                                Added Vaccination Records
+                              </div>
+                              <div class="panel-body">
+                                <div class="row" ng-repeat="v in vacRecords">
+                                  <div class="col-md-2">
+                                    {{v.vaccination}}
+                                  </div>
+                                  <div class="col-md-2">
+                                    {{v.administrationDate}}
+                                  </div>
+                                  <div class="col-md-2">
+                                    <button class="btn btn-danger btn-xs" ng-click="removeVacRecord($index)" name="removeVacRecord">
                                       <b>x</b>
                                     </button>
                                   </div>
