Fixed documentOfficeVisit to properly check fields when adding vacrecord

--- a/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
+++ b/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
@@ -72,6 +72,8 @@
             	  if (!isDate(v.administrationDate)) {
             		  err.push("Administration date is in an invalid format");
             	  }
+            	  
+            	  return err.join(".");
               }
 
 
