Added functionality to allow admins to add/edit lab procedures. Issue #5

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -147,6 +147,7 @@ a {
 									User</a></li>
 							<li><a href="/iTrust2/admin/drugs" id="drugs">Manage Drugs</a></li>
 							<li><a href="/iTrust2/admin/manageICDCodes" id="manageICDCodes">Manage ICD-10 Codes</a></li>
+							<li><a href="/iTrust2/admin/labProcedures" id="manageProcedures">Manage Lab Procedures</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
