--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -174,6 +174,8 @@ a {
 							      id="editOfficeVisit">Edit Office Visit</a></li>
 					      	<li> <a href="/iTrust2/hcp/editPrescriptions"
 							      id="editPrescriptions-personnel">Edit Prescriptions</a></li>
+							 <li> <a href="/iTrust2/hcp/editVaccinations"
+							      id="editVaccinations-personnel">Edit Vaccinations</a></li>
 						</ul>
 					</li>
 				</ul>
