--- a/iTrust2/src/main/resources/views/patient/viewVacRecords.html
+++ b/iTrust2/src/main/resources/views/patient/viewVacRecords.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:include="layout :: head(title=~{::title},links=~{})">
-  <title>View Vaccination Records</title>
+  <title>View Vaccinations</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 </head>
@@ -13,18 +13,18 @@
     <script th:inline="javascript">
       /* Otherwise Thymeleaf tries to parse Javascript as XML and breaks itself sometimes.  Sigh */
       /*<![CDATA[*/
-      var app = angular.module("vacRecordsApp", []);
-      app.controller('vacRecordsCtrl', function ($scope, $http) {
-        $scope.vacRecords = [];
+      var app = angular.module("vacrecordsApp", []);
+      app.controller('vacrecordsCtrl', function ($scope, $http) {
+        $scope.vacrecords = [];
         $scope.pattern = /^\d{4}-\d{4}-\d{2}$/;
         $scope.loadTable = function () {
-          $http.get("/iTrust2/api/v1/vacRecords").then(
+          $http.get("/iTrust2/api/v1/vacrecords").then(
             function (response) {
-              $scope.vacRecords = response.data;
+              $scope.vacrecords = response.data;
               $scope.message = "";
             }, function (rejection) {
-              $scope.vacRecords = [];
-              $scope.message = "Could not display vaccination records";
+              $scope.vacrecords = [];
+              $scope.message = "Could not display vacrecords";
             });
         }
         $scope.loadTable();
@@ -32,27 +32,31 @@
 			/*]]>*/
     </script>
 
-    <div ng-app="vacRecordsApp" ng-controller="vacRecordsCtrl">
+    <div ng-app="vacrecordsApp" ng-controller="vacrecordsCtrl">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3>Patient View Vaccination Records</h3>
+                <h3>Patient View Vaccinations</h3>
               </div>
               <div class="panel-body">
                 <table class="table table-bordered">
-                  <caption>My Vaccination Records:</caption>
+                  <caption>My Vaccinations:</caption>
                   <thead>
                     <tr>
                       <th>Vaccination</th>
+                      <th>Code</th>
                       <th>Administration Date</th>
+                      <th>Description</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr name="vacRecordsTableRow" ng-repeat="v in vacRecords | orderBy: 'administrationDate'" vacRecordId={{v.id}}>
-                      <td name="drugCell">{{v.vaccination.name}}</td>
-                      <td name="codeCell">{{v.administrationDate}}</td>
+                    <tr name="vacrecordTableRow" ng-repeat="v in vacrecords | orderBy: 'drug'" vacrecordId={{v.id}}>
+                      <td name="vaccinationCell">{{v.vaccination.name}}</td>
+                      <td name="vaccinationCell">{{v.vaccination.code}}</td>
+                      <td name="administrationCell">{{v.administrationDate.month + 1}}/{{v.administrationDate.dayOfMonth}}/{{v.administrationDate.year}}</td>
+                      <td name="vaccinationCell">{{v.vaccination.description}}</td>
                     </tr>
                   </tbody>
                 </table>
