Added "Manage" header to editVaccinations.html
Issue #51

--- a/iTrust2/src/main/resources/views/hcp/editVaccinations.html
+++ b/iTrust2/src/main/resources/views/hcp/editVaccinations.html
@@ -158,6 +158,7 @@
                       <th>Vaccination</th>
                       <th>Patient</th>
                       <th>Administration Date</th>
+                      <th>Manage</th>
                     </tr>
                   </thead>
                   <tbody>
