Added patient/emergency health records for ERs.

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -205,6 +205,27 @@ a {
 								id="personalRepresentatives-patient">Personal Representatives</a>
 					</li>
 				</ul>
+
+				<ul id="er-dropdown" class="nav navbar-nav">
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" href="#">Edit<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="/iTrust2/personnel/editDemographics"
+								id="editdemographics-er">Edit Demographics</a></li>
+							<li><a href="/iTrust2/hcp/viewPatientRecords" id="emergencyHealthRecords">Lookup Patient</a></li>
+						</ul>
+					</li>
+				</ul>
+				<ul id="lt-dropdown" class="nav navbar-nav">
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" href="#">Edit<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="/iTrust2/personnel/editDemographics"
+								id="editdemographics-labtech">Edit Demographics</a></li>
+						</ul>
+					</li>
+				</ul>
+
 				<ul id="extra-dropdown" class="nav navbar-nav">
 					<li><a
 						href="https://github.ncsu.edu/engr-csc326-staff/iTrust2-v2/wiki">About</a></li>
